P3/confs/service.yaml
# p3/confs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wil-playground
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: wil-playground
  ports:
    - protocol: TCP
      port: 8888
      targetPort: 8888
      # nodePort: 30000    # matches the K3d port mapping in install.sh
